Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* added hardlink awareness to splitdebug and stripping.  For pkgs
  that install hardlinks (git for example), this fixes double stripping
  and complaints output during merging for trying to splitdebug it.
  Bit faster in addition since for git, it cuts the splitdebug down
  from 110 to 7 or so.

* Fix incompatibilities in pinspect portageq api that eselect uses.
  Eselect will be updated to use better api's moving forward, but
  till then restore support.

* pinspect portageq and pinspect query envvar now return space delimited
  string values if the queried value was a list.

* Fix bug where use dep forced changes to use state weren't honored
  at the build level.

* Fix fairly serious bug where immutable use flags (arch for example),
  wasn't being enforced for pkg dependency calculations.


pkgcore 0.7.7.7: Jan 24th, 2011

* pkgcore resolver now understand weak blockers.  This fixes a long
  standing issue where portage/paludis would allow a transaction that
  pkgcore would refuse (at the time of pkgcore's creation, weak/strong
  didn't exist- just strong).

* work around eselect incompatibility for root not always being specified
  to `pinspect portageq get_repositories`.

* Better error reporting for mistakes in incremental vars in configuration.


pkgcore 0.7.7.6: Jan 16th, 2011

* fix bug where REQUIRED_USE wasn't being stored during metadata
  regeneration.  Thanks to marienz for reporting it.

* FEATURES=compressdebug support was added.  This enables splitdebug
  to compress the generate debug files; this can easily reduce the footprint
  from 20GB to ~8GB on an average system.

* no longer complain about incorrect profiles/categories files.  PMS,
  and people who hate QA suck.


pkgcore 0.7.7.5: Dec 26th, 2011

* pkgcore no longer requires a manifest to exist if the repository uses
  thin-manifests, and there are no distfiles for a pkg.
